Update deps and add upload endpoint
